Fix content cut off and remove impressum/privacy-policy links from app

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -148,6 +148,8 @@ ion-app.use-app-features .option-container {
 /* ionic */
 .main-content {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .md .toolbar-title-text {
