--- a/src/app/page-footer/page-footer.component.scss
+++ b/src/app/page-footer/page-footer.component.scss
@@ -6,7 +6,7 @@
 }
 
 .copyright-notice {
-    padding: 20px 10px 10px;
+    padding: 20px 10px 0;
 }
 
 .domain-info {
